# rust-lambda

./: .gitignore
functions/: build_all.sh  clean_all.sh
functions/delete_todo/: Cargo.toml  event.json
functions/delete_todo/src/: lib.rs  main.rs
functions/get_todo/: Cargo.toml  event.json
functions/get_todo/src/: lib.rs  main.rs
functions/patch_todo_dequeue/: Cargo.toml
functions/patch_todo_dequeue/src/: lib.rs  main.rs
functions/patch_todo_enqueue/: Cargo.toml  event.json
functions/patch_todo_enqueue/src/: lib.rs  main.rs
functions/post_todo/: Cargo.toml  event.json
functions/post_todo/src/: lib.rs  main.rs
terraform/: api.tf  api.yml  build_all.sh  clean_all.sh  delete.tf  dynamodb.tf  get.tf  main.tf  patch.tf  post.tf  provider.tf  replace.sh  sqs.tf  variables.tf
terraform/iam/: policy.json
