[package]
name = "delete_todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
aws-config = "0.11.0"
aws-sdk-dynamodb = "0.11.0"
aws_lambda_events = "0.4.0"
http = "0.2.4"
lambda_runtime = "0.5.1"
serde = "^1"
serde_json = "^1"
tokio = {version = "1", features = ["full"]}