[package]
edition = "2021"
name = "post-todo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
aws-config = "0.11.0"
aws-sdk-dynamodb = "0.11.0"
aws_lambda_events = "0.4.0"
http = "0.2.4"
lambda_runtime = "0.5.1"
rand = {version = "0.8.5", features = ["small_rng"]}
serde = "^1"
serde_json = "^1"
tokio = {version = "1", features = ["full"]}
